adding the suspense boundry for loading UI where the data is fetced from the server and it takes time until then the loading screen is a better user experience

--- a/app/globals.css
+++ b/app/globals.css
@@ -137,3 +137,11 @@ form button {
     absolute bottom-0 right-0 
     rounded-tl-md;
 }
+
+.spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  font-size: 24px;
+}
